# base

./: .gitignore  .npmrc  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
copilotkit-a2ui/: .env.example  CHECKLIST.md  LEARNING_PLAN.md  WEEKLY_SCHEDULE.md
copilotkit-a2ui/notes/: a2ui-message-reference.md  ag-ui-a2ui-stack-map.md  company-catalog-blueprint.md  copilotkit-best-practices.md  generative-ui-patterns.md
copilotkit-a2ui/p0-copilotkit-starter/: README.md
copilotkit-a2ui/p1-ag-ui-app/: README.md
copilotkit-a2ui/p2-a2ui-surfaces/: README.md
copilotkit-a2ui/p3-a2ui-catalog/: README.md
copilotkit-a2ui/p4-langgraph-client/: README.md
copilotkit-a2ui/p5-company-agent-ui/: README.md
openharness/: .env.example  CHECKLIST.md  LEARNING_PLAN.md  WEEKLY_SCHEDULE.md  docker-compose.yml
openharness/notes/: company-backend-blueprint.md  company-backend-decision-tree.md  harness-architecture-map.md  harness-vs-langchain-map.md  openharness-best-practices.md
openharness/p0-harness-lab/: README.md
openharness/p1-custom-tool/: README.md
openharness/p2-company-skills/: README.md
openharness/p3-mcp-integration/: README.md
openharness/p3-multi-agent-lab/: README.md
openharness/p4-gateway-backend/: README.md
openharness/p5-company-agent-platform/: README.md
python-ai/: .env.example  CHECKLIST.md  LEARNING_PLAN.md  WEEKLY_SCHEDULE.md  docker-compose.yml
python-ai/p0-cli-chat/: README.md  pyproject.toml
python-ai/p0-cli-chat/src/: chat.py  config.py  main.py  models.py
reactjs/: CHECKLIST.md  LEARNING_PLAN.md  WEEKLY_SCHEDULE.md  docker-compose.yml
(+59 files in other folders)
